[gd_scene load_steps=16 format=3 uid="uid://bfpo1nobw3tgk"]

[ext_resource type="Script" path="res://Scripts/platformer_2.gd" id="1_voac7"]
[ext_resource type="Texture2D" uid="uid://c15dqw64qr5bh" path="res://Assets/Custom Assets/Green.png" id="2_80pdi"]
[ext_resource type="Texture2D" path="res://assets/Custom Assets/Terrain (16x16).png" id="3_r53l6"]
[ext_resource type="PackedScene" uid="uid://dbme678wg3lbh" path="res://Scenes/platformer_player.tscn" id="4_dcj6j"]
[ext_resource type="PackedScene" uid="uid://c2gh0s81jke0x" path="res://Scenes/quinn_2.tscn" id="5_gt1k2"]
[ext_resource type="PackedScene" uid="uid://c65w3jy2365ho" path="res://Scenes/box.tscn" id="6_7awsk"]
[ext_resource type="Texture2D" path="res://assets/Custom Assets/place_here.png" id="7_qmd8q"]
[ext_resource type="Texture2D" uid="uid://c7b6ybxii57ka" path="res://Assets/Custom Assets/flag.png" id="8_58c0m"]
[ext_resource type="Script" path="res://Scripts/flag_area.gd" id="9_f6rvv"]
[ext_resource type="PackedScene" uid="uid://b6rg0j5tk5cva" path="res://Scenes/island2.tscn" id="10_62fsg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dhdfm"]
texture = ExtResource("3_r53l6")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8, -8, -7.5)
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
19:0/0 = 0
19:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -3.25, 8, -3.125, 8, -8)
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -3.25, 8, -3.125, 8, -8)
19:1/0 = 0
19:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:1/0/physics_layer_0/angular_velocity = 0.0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, -3.25, 8, -3.125, 8, -8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
18:2/0 = 0
18:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:2/0/physics_layer_0/angular_velocity = 0.0
19:2/0 = 0
19:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:2/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
19:4/0 = 0
19:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:4/0/physics_layer_0/angular_velocity = 0.0
20:4/0 = 0
20:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:4/0/physics_layer_0/angular_velocity = 0.0
21:4/0 = 0
21:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0
19:5/0 = 0
19:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:5/0/physics_layer_0/angular_velocity = 0.0
20:5/0 = 0
20:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:5/0/physics_layer_0/angular_velocity = 0.0
21:5/0 = 0
21:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
17:6/0 = 0
17:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:6/0/physics_layer_0/angular_velocity = 0.0
18:6/0 = 0
18:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:6/0/physics_layer_0/angular_velocity = 0.0
19:6/0 = 0
19:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:6/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
13:8/0 = 0
13:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:8/0/physics_layer_0/angular_velocity = 0.0
14:8/0 = 0
14:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:8/0/physics_layer_0/angular_velocity = 0.0
15:8/0 = 0
15:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:8/0/physics_layer_0/angular_velocity = 0.0
17:8/0 = 0
17:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:8/0/physics_layer_0/angular_velocity = 0.0
18:8/0 = 0
18:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:8/0/physics_layer_0/angular_velocity = 0.0
19:8/0 = 0
19:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:8/0/physics_layer_0/angular_velocity = 0.0
20:8/0 = 0
20:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
8:9/0 = 0
8:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:9/0/physics_layer_0/angular_velocity = 0.0
9:9/0 = 0
9:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:9/0/physics_layer_0/angular_velocity = 0.0
10:9/0 = 0
10:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:9/0/physics_layer_0/angular_velocity = 0.0
12:9/0 = 0
12:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:9/0/physics_layer_0/angular_velocity = 0.0
13:9/0 = 0
13:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:9/0/physics_layer_0/angular_velocity = 0.0
14:9/0 = 0
14:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:9/0/physics_layer_0/angular_velocity = 0.0
15:9/0 = 0
15:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:9/0/physics_layer_0/angular_velocity = 0.0
17:9/0 = 0
17:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:9/0/physics_layer_0/angular_velocity = 0.0
18:9/0 = 0
18:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:9/0/physics_layer_0/angular_velocity = 0.0
19:9/0 = 0
19:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:9/0/physics_layer_0/angular_velocity = 0.0
20:9/0 = 0
20:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
6:10/0 = 0
6:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:10/0/physics_layer_0/angular_velocity = 0.0
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:10/0/physics_layer_0/angular_velocity = 0.0
8:10/0 = 0
8:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:10/0/physics_layer_0/angular_velocity = 0.0
13:10/0 = 0
13:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:10/0/physics_layer_0/angular_velocity = 0.0
14:10/0 = 0
14:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:10/0/physics_layer_0/angular_velocity = 0.0
15:10/0 = 0
15:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:10/0/physics_layer_0/angular_velocity = 0.0
18:10/0 = 0
18:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:10/0/physics_layer_0/angular_velocity = 0.0
19:10/0 = 0
19:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:10/0/physics_layer_0/angular_velocity = 0.0
20:10/0 = 0
20:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:10/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_cj38s"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dhdfm")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6u6h"]
size = Vector2(46, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrg3p"]
size = Vector2(84, 125)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ory83"]

[node name="World" type="Node2D"]
script = ExtResource("1_voac7")

[node name="Sprite2D" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -2427.0
offset_top = -1133.0
offset_right = -2314.0
offset_bottom = -1020.0
scale = Vector2(123.312, 34.4062)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_80pdi")
stretch_mode = 1

[node name="main" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(-6, 472)
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_cj38s")
format = 2
layer_0/tile_data = PackedInt32Array(131071, 786432, 0, 65536, 851968, 0, 65537, 851968, 0, 65538, 851968, 0, 65539, 851968, 0, 65540, 851968, 0, 65541, 851968, 0, 65542, 851968, 0, 65543, 851968, 0, 65544, 851968, 0, 65545, 917504, 0, -65524, 786432, 0, -65523, 851968, 0, -65522, 917504, 0, -196592, 786432, 0, -196591, 851968, 0, -196590, 917504, 0, -327660, 786432, 0, -327659, 851968, 0, -327658, 917504, 0, 851993, 786432, 0, 851994, 851968, 0, 851995, 917504, 0, 851996, 786432, 0, 851997, 851968, 0, 851998, 917504, 0, 851999, 786432, 0, 852000, 851968, 0, 852001, 917504, 0, 852002, 1114112, 1, 852003, 1179648, 1, 852007, 1245184, 1, 852008, 1114112, 1, 852009, 1179648, 1, 852010, 1245184, 1, 852017, 1114112, 1, 852018, 1179648, 1, 852019, 1245184, 1, 852020, 1114112, 1, 852025, 1245184, 1, 852026, 1114112, 1, 852027, 1179648, 1, 852028, 1245184, 1, 852029, 786432, 0, 852031, 917504, 0, 852032, 786432, 0, 852033, 851968, 0, 852034, 917504, 0, 852035, 786432, 0, 852036, 851968, 0, 852037, 917504, 0, 852011, 1114112, 1, 852012, 1179648, 1, 852013, 1245184, 1, 852014, 1114112, 1, 852015, 1179648, 1, 852016, 1245184, 1, 852038, 1114112, 1, 852039, 1179648, 1, 852040, 1245184, 1, 852041, 1114112, 1, 852042, 1179648, 1, 852043, 1245184, 1, 852044, 1114112, 1, 852045, 1179648, 1, 852046, 1245184, 1, 852047, 1114112, 1, 852048, 1179648, 1, 852049, 1245184, 1, 852050, 786432, 0, 852051, 851968, 0, 852052, 851968, 0, 852053, 851968, 0, 852054, 851968, 0, 852055, 851968, 0, 852056, 851968, 0, 852057, 851968, 0, 852058, 851968, 0, 852059, 851968, 0, 852060, 917504, 0)

[node name="Player" parent="." instance=ExtResource("4_dcj6j")]
position = Vector2(33, 477)

[node name="Quinn2" parent="." instance=ExtResource("5_gt1k2")]
position = Vector2(333, 488)

[node name="Box4" parent="." instance=ExtResource("6_7awsk")]
position = Vector2(2124, 1023)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 2408.0
offset_top = 1002.0
offset_right = 2569.0
offset_bottom = 1025.0
text = "Eye has been placed!"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1835, 523)
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(650, 547)
shape = SubResource("RectangleShape2D_p6u6h")

[node name="place_here" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2485, 1070)
scale = Vector2(3, 3)
texture = ExtResource("7_qmd8q")

[node name="Label2" type="Label" parent="."]
offset_left = 969.0
offset_top = 306.0
offset_right = 1591.0
offset_bottom = 329.0
text = "A leap of faith?"

[node name="Label3" type="Label" parent="."]
offset_left = -43.0
offset_top = 306.0
offset_right = 579.0
offset_bottom = 355.0
text = "Remember, click \"r\" to restart a level, in
case you drop a box into the void"

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(4220, 1033)
scale = Vector2(6, 7.5625)
texture = ExtResource("8_58c0m")

[node name="flag_area" type="Area2D" parent="."]
position = Vector2(1628, 428)
collision_layer = 2
collision_mask = 3
script = ExtResource("9_f6rvv")
scene = ExtResource("10_62fsg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="flag_area"]
position = Vector2(2590, 603.5)
shape = SubResource("RectangleShape2D_qrg3p")

[node name="death" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(0, 1330)
shape = SubResource("WorldBoundaryShape2D_ory83")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="flag_area" to="." method="_on_flag_area_body_entered"]
[connection signal="body_entered" from="flag_area" to="flag_area" method="_on_body_entered"]
[connection signal="body_entered" from="death" to="." method="_on_death_body_entered"]
